changed z-index in _layout.css of _sass to fix menu/art overlap

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -7,7 +7,7 @@
     min-height: 56px;
 
     // Positioning context for the mobile navigation icon
-    position: relative;
+    position: absolute;
     z-index : 9000;
 }
 
